--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="bordered-column">
-                        <img src="./images/beginner_img.png" alt="Beginner Image" class="img-fluid card_img">
+                        <img src="./images/beginner_img.png" alt="Beginner Image" class="img-fluid card_img rounded mx-auto d-block">
                         <h3 class="text-center pb-5">Beginners</h3>
                         <ul class="mt-2 custom-bullet-list">
                             <li>1.5 hr / 3 days a week </li>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="bordered-column">
-                        <img src="./images/intermediate_img.png" alt="Intermediate Image" class="img-fluid card_img">
+                        <img src="./images/intermediate_img.png" alt="Intermediate Image" class="img-fluid card_img rounded mx-auto d-block">
                         <h3 class="text-center pb-5">Intermediate</h3>
                         <ul class="mt-2 custom-bullet-list">
                             <li>1.5 hr / 3 days a week</li>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="bordered-column">
-                        <img src="./images/expert_img.png" alt="Expert Image" class="img-fluid card_img">
+                        <img src="./images/expert_img.png" alt="Expert Image" class="img-fluid card_img rounded mx-auto d-block">
                         <h3 class="text-center pb-5">Expert</h3>
                         <ul class="mt-2 custom-bullet-list">
                             <li>1.5 hr / 3 days a week </li>
@@ -765,7 +765,7 @@
                 </div>
 
                 <!-- Column 3 -->
-                <div class="footer-column text-center">
+                <div class="footer-column">
                     <h4>Courses</h4>
                     <p class="my-3"><strong>Beginner</strong></p>
                     <p><strong>Intermediate</strong></p>
